--- a/preactalpha.template.html
+++ b/preactalpha.template.html
@@ -35,6 +35,7 @@
 			<div class="rightmenu">
 			</div>
 			<div class="mainmenufooter">
+        <div class="bgcredit" title="Adding this bit was a giant pain in the ass btw, no clue why the testclient doesn't have artist credit by default."></div>
 				<small><a href="//pokemonshowdown.com/" target="_blank"><strong>Pok&eacute;mon Showdown</strong></a> | <a href="http://smogon.com/" target="_blank"><strong>Smogon</strong></a><br><a href="//pokemonshowdown.com/dex/" target="_blank">Pokédex</a> | <a href="//pokemonshowdown.com/replay/" target="_blank">Replays</a> | <a href="//pokemonshowdown.com/rules" target="_blank">Rules</a></small> | <small><a href="//pokemonshowdown.com/forums/" target="_blank">Forum</a></small>
 			</div>
 		</div></div>
