--- a/testclient.html
+++ b/testclient.html
@@ -10,6 +10,9 @@
 		<link rel="stylesheet" href="style/sim-types.css" />
 		<link rel="stylesheet" href="style/utilichart.css" />
 		<link rel="stylesheet" href="style/font-awesome.css" />
+    
+    <!-- custom lobby intro animations because reasons -->
+    <link rel="stylesheet" href="style/customlobby.css" />
 		<meta name="robots" content="noindex" />
 		<meta http-equiv="X-UA-Compatible" content="IE=Edge" />
 		<script src="https://play.pokemonshowdown.com/config/config.js"></script>
@@ -62,6 +65,7 @@
 			<div class="rightmenu">
 			</div>
 			<div class="mainmenufooter">
+        <div class="bgcredit" title="Adding this bit was a mild pain in the ass btw, no clue why the testclient doesn't have artist credit by default."></div>
 				<small><a href="//pokemonshowdown.com/" target="_blank"><strong>Pok&eacute;mon Showdown</strong></a> | <a href="http://smogon.com/" target="_blank"><strong>Smogon</strong></a><br><a href="//pokemonshowdown.com/dex/" target="_blank">Pokédex</a> | <a href="//pokemonshowdown.com/replay/" target="_blank">Replays</a> | <a href="//pokemonshowdown.com/rules" target="_blank">Rules</a></small> | <small><a href="//pokemonshowdown.com/forums/" target="_blank">Forum</a></small>
 			</div>
 		</div></div>
