--- a/index1.html
+++ b/index1.html
@@ -72,7 +72,7 @@ https://psim.us/dev
 	LM.innerHTML += ' DONE<br />Loading libraries...';
 </script>
 <script nomodule src="//play.pokemonshowdown.com/js/lib/ps-polyfill.js"></script>
-<script src="//play.pokemonshowdown.com/config/config.js?8145323b"></script>
+<script src="//play.pokemonshowdown.com/config/config.js?22f9ea1d"></script>
 <script src="//play.pokemonshowdown.com/js/lib/jquery-2.1.4.min.js"></script>
 <script src="//play.pokemonshowdown.com/js/lib/jquery-cookie.js"></script>
 <script src="//play.pokemonshowdown.com/js/lib/autoresize.jquery.min.js?52413642"></script>
@@ -88,7 +88,7 @@ https://psim.us/dev
 
 <script src="//play.pokemonshowdown.com/js/battledata.js?a21617d1"></script>
 <script src="//play.pokemonshowdown.com/js/storage.js?a9ea5ae2"></script>
-<script src="//play.pokemonshowdown.com/data/pokedex-mini.js?0.6115154795677413"></script>
+<script src="//play.pokemonshowdown.com/data/pokedex-mini.js?5077fc16"></script>
 <script src="//play.pokemonshowdown.com/data/typechart.js?1b82876a"></script>
 <script src="//play.pokemonshowdown.com/js/battle.js?4c7ee8b6"></script>
 <script src="//play.pokemonshowdown.com/js/lib/sockjs-1.4.0-nwjsfix.min.js"></script>
