added ability to import teams from savefiles

--- a/index.html
+++ b/index.html
@@ -132,6 +132,8 @@
 		<script src="js/battle-dex-search.js"></script>
 		<script src="js/search.js"></script>
 
+		<script src="js/ruby-marshal.js"></script>
+
 		<script src="data/aliases.js" async="async" onerror="loadRemoteData(this.src)"></script>
 
 		<script>
